--- a/.github/workflows/cov.yml
+++ b/.github/workflows/cov.yml
@@ -10,6 +10,7 @@ on:
     - master
 jobs:
   Test:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Install cargo2junit
