--- a/.github/workflows/cov.yml
+++ b/.github/workflows/cov.yml
@@ -16,8 +16,7 @@ jobs:
     - name: Install cargo2junit
       run: cargo install cargo2junit
     - name: Test
-      run: cargo test -p nexus_unity_sdbp -- -Z unstable-options --format json --report-time
-        | cargo2junit > results.xml
+      run: cargo test -- -Z unstable-options --format json --report-time | cargo2junit > results.xml
     - name: Publish result
       uses: EnricoMi/publish-unit-test-result-action@v1
       with:
