--- a/.github/workflows/cov.yml
+++ b/.github/workflows/cov.yml
@@ -1,4 +1,4 @@
-name: rust-cov-test
+name: rust-test
 on:
   push:
     branches:
@@ -17,7 +17,8 @@ jobs:
     - name: Install cargo2junit
       run: cargo install cargo2junit
     - name: Test
-      run: cargo test -- -Z unstable-options --format json --report-time | cargo2junit > results.xml
+      run: cargo test -- -Z unstable-options --format json --report-time | cargo2junit
+        > results.xml
     - name: Publish result
       uses: EnricoMi/publish-unit-test-result-action@v1
       with:
